# Console-fx

./: CMakeLists.txt  README.md  graphics.h  main.cpp
Console/Headers/: config.h  console.h  cursor.h  display.h  error.h  expr.h  font.h  key.h  line.h  message.h  misc.h  node.h  string.h  symbol.h
Console/Sources/: console.cpp  cursor.cpp  display.cpp  error.cpp  expr.cpp  font.cpp  key.cpp  key_glfw.cpp  line.cpp  message.cpp  node.cpp  string.cpp  symbol.cpp
Eigenmath/Headers/: defs.h  help.h  prototypes.h  selftest.h
Eigenmath/Sources/: abs.cpp  add.cpp  adj.cpp  alloc.cpp  append.cpp  arccos.cpp  arccosh.cpp  arcsin.cpp  arcsinh.cpp  arctan.cpp  arctanh.cpp  arg.cpp  atomize.cpp  bake.cpp  besselj.cpp  bessely.cpp  bignum.cpp  binomial.cpp  ceiling.cpp  choose.cpp  circexp.cpp  clear.cpp  clock.cpp  coeff.cpp  cofactor.cpp  condense.cpp  conj.cpp  cons.cpp  contract.cpp  cos.cpp  cosh.cpp  data.cpp  decomp.cpp  define.cpp  defint.cpp  degree.cpp  denominator.cpp  derivative.cpp  det.cpp  dirac.cpp  (+107 more)
